--- a/17-pug/views/index.html
+++ b/17-pug/views/index.html
@@ -5,7 +5,43 @@
   </head>
   <body> 
     <h1 class="titre" id="motitre">Bonjour tous</h1>
-    <h3>Name:  </h3>
-    <h3>Score: </h3>
+    <p>&lt;b&gt;said : 234 &lt;/b&gt;</p>
+    <h3>Name:  said</h3>
+    <h3>Score: 234</h3>
+    <!-- les boocle-->
+    <table> 
+      <tr> 
+        <th>Name </th>
+        <th>score </th>
+      </tr>
+      <tr> 
+        <td>said  </td>
+        <td>123</td>
+      </tr>
+      <tr> 
+        <td>reda  </td>
+        <td>45</td>
+      </tr>
+      <tr> 
+        <td>nadia  </td>
+        <td>342</td>
+      </tr>
+    </table>
+    <!-- Les condition-->
+    <h3>users with score sup à 100</h3>
+    <table> 
+      <tr> 
+        <th>Name </th>
+        <th>score </th>
+      </tr>
+      <tr> 
+        <td>said  </td>
+        <td>123</td>
+      </tr>
+      <tr> 
+        <td>nadia  </td>
+        <td>342</td>
+      </tr>
+    </table>
   </body>
 </html>
